--- a/index.html
+++ b/index.html
@@ -647,4 +647,14 @@ var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
 
            </script>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64311361-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
