windows store link

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                   <div class="app1-txt">Available on<br><strong style="font-size: 12px;">Windows Store</strong></div>
                 </div>
 
-             <div class="slider-app2" onclick="alert('قريبا جدا بإذن الله')">
+             <div class="slider-app2" onclick="location.href='http://apps.microsoft.com/windows/en-us/app/mohafez/496b3623-baca-4fb6-be50-a4a9a4db575e';">
                   <div class="slider-img">
 
                                         <i class="fa fa-windows" style="font-size: 40px;"></i>
                   </div>
-                  <div class="app1-txt">Available on<br><strong style="font-size: 12px;">Windows 8</strong></div>
+                  <div class="app1-txt">Available on<br><strong style="font-size: 12px;">Windows Phone</strong></div>
                 </div>
              </div>
 
