Fixing startup errors when no cookies are found

--- a/tools/quran_seg.html
+++ b/tools/quran_seg.html
@@ -17,6 +17,7 @@
     <h1>
       عرض تزامن الصوت مع الكلمات - محفظ الوحيين
     </h1>
+    القارئ
     <select id="qaree">
     </select>
     <select id="sura">
@@ -32,8 +33,8 @@
       <option value="2.0">Faster</option>
  -->    </select>
     <select id="audio_source">
-      <option value="remote">Online</option>
-      <option value="local">Local</option>
+      <option value="absolute">Remote Audio</option>
+      <option value="relative">Relative</option>
     </select>
     <span id="audio_download_link">
       <a>رابط تحميل الملفات الصوتية دفعة واحدة</a>
@@ -44,7 +45,7 @@
       </audio>
     </p>
     <div id="text">
-      بسم الله
+      اختر قارئا للبدء
     </div>
     <center>
 <!--       <button id="report">أبلغ عن خطأ</button>
