correcting some text

--- a/privacy.html
+++ b/privacy.html
@@ -136,7 +136,7 @@
                                                     
                         Last updated: June 13, 2017
                         </p><p>
-Islamic Last Will (El-Mohafez) ("us", "we", or "our") operates the Islamic Last Will (El-Mohafez) mobile application (the "Service").
+El-Mohafez ("us", "we", or "our") operates th El-Mohafez mobile application (the "Service").
                         </p><p>
 This page informs you of our policies regarding the collection, use and disclosure of personal Data when you use our Service.
                         </p><p>
