--- a/index-en.html
+++ b/index-en.html
@@ -56,6 +56,24 @@
         }
       }
     </style>
+    <script>
+      (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function () {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(window, document, "script", "//www.google-analytics.com/analytics.js", "ga");
+
+      ga("create", "UA-64311361-1", "auto");
+      ga("send", "pageview");
+    </script>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbar-example" data-bs-offset="150">
     <!-- Header -->
