--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         id="modelVideo"
                         width="100%"
                         height="100%"
-                        src="https://www.youtube.com/embed/n-97plW5IZg&origin=https://www.elmohafez.com"
+                        src="https://www.youtube.com/embed/n-97plW5IZg"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -504,7 +504,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/tmYBxNU5PyY&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/tmYBxNU5PyY"
                 title="الخصائص العامة في قسم القرآن (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
@@ -515,7 +515,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/3RlznkndTZc&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/3RlznkndTZc"
                 title="تشغيل التلاوة وإمكانيات المشغل الصوتي"
                 frameborder="0"
                 allowfullscreen
@@ -526,14 +526,14 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/9iGoDNlKY-g&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/9iGoDNlKY-g"
                 frameborder="0"
                 allowfullscreen
               ></iframe>
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/50Uq96d_Vd0&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/50Uq96d_Vd0"
                 title="تسجيل الصوت والتسميع (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
@@ -544,7 +544,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/9oFQH1piRk0&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/9oFQH1piRk0"
                 title="الرسم على الصفحة ومشاركة الآيات وإضافة الفاصل و.. (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
@@ -555,7 +555,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/K3gRFfOXP6c&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/K3gRFfOXP6c"
                 title="التفاسير والترجمات والتلوين الموضوعي (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
@@ -566,7 +566,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/kZn9F1O3B6M&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/kZn9F1O3B6M"
                 title="الختمة (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
@@ -577,7 +577,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/NGHNYSSCS30&origin=https://www.elmohafez.com"
+                src="https://www.youtube.com/embed/NGHNYSSCS30"
                 title="القائمة الرئيسية (تطبيق محفظ الوحيين)"
                 frameborder="0"
                 allowfullscreen
