donate button added

--- a/index-en.html
+++ b/index-en.html
@@ -114,8 +114,12 @@
         </div>
       </nav>
       <div>
+        <a data-aos="fade-right" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+          class="text-white btn btn-style rounded mt-1 plus bg-btn-green btn-lg">
+          DONATE
+        </a>
         <!-- Button trigger modal -->
-        <button type="button" id="headerBtn" class="btn btn-lg rounded btn-style" data-bs-toggle="modal"
+        <button type="button" id="headerBtn" class="btn rounded btn-style" data-bs-toggle="modal"
           data-bs-target="#frameModalTop">
           <img src="assets/img/icons/world.svg" style="width: 25px" />
           <span id="btnColor">English <i class="fa fa-angle-down"></i></span>
@@ -613,6 +617,12 @@
         <!-- <a href="https://wa.me/97470490666"
             ><img src="assets/img/icons/socail/whatsapp.svg" alt="whatsapp-icon" class="img-fluid"
           /></a> -->
+      </div>
+      <div style="max-width: 400px; margin: 0 auto;">
+        <a data-aos="fade-left" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+          class="text-white font-bold btn btn-style rounded mt-1 plus bg-btn-green d-block py-2">
+          DONATE
+        </a>
       </div>
     </div>
 
