donate page added-ipad frame updated

--- a/index-en.html
+++ b/index-en.html
@@ -114,7 +114,7 @@
         </div>
       </nav>
       <div>
-        <a data-aos="fade-right" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+        <a data-aos="fade-right" href="donate-en.html" data-aos="fade-left"
           class="text-white btn btn-style rounded mt-1 plus bg-btn-green btn-lg">
           DONATE
         </a>
@@ -619,7 +619,7 @@
           /></a> -->
       </div>
       <div style="max-width: 400px; margin: 0 auto;">
-        <a data-aos="fade-left" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+        <a target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
           class="text-white font-bold btn btn-style rounded mt-1 plus bg-btn-green d-block py-2">
           DONATE
         </a>
