--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </div>
   </div>
   <!-- Language Modal end -->
+
   <header id="header" data-aos="fade" data-aos-duration="500">
     <div class="container px-2" id="navbar-example">
       <div class="logo">
@@ -114,7 +115,7 @@
         </div>
       </nav>
       <div>
-        <a data-aos="fade-left" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+        <a href="donate.html" data-aos="fade-left"
           class="text-white btn btn-style rounded mt-1 plus bg-btn-green btn-lg">
           تبرع
         </a>
@@ -621,7 +622,7 @@
         </div>
       </div>
       <div style="max-width: 400px; margin: 0 auto;">
-        <a data-aos="fade-left" target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
+        <a target="_blank" href="https://www.launchgood.com/v4/campaign/mohafez_campaign"
           class="text-white btn btn-style rounded mt-1 plus bg-btn-green d-block py-2">
           تبرع
         </a>
